@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0
hide circle
hide methods

class RealEstateAgent {
    - name
    -citizenCardNumber
    +email
    -phoneNumber
    +publishAd(propertyId: string): Result
}

class Listing {
  -publishDate
  -businessType
  -commission
  -status
  +getProperty(): Property
}
class Advertisement {
    +id
    -commission
    +visibilityStatus
}
class Lease {
    +monthlyRent
    +leasePeriod
    +leaseStartDate
    +leaseEndDate
}
class Sale {
    +saleValue
    +responsibleAgent
    +buyerClient
}
class Property {
    +type
    +area
    +location
    +distanceFromCityCenter
    +price
    +photos
    +availability
}

RealEstateAgent "1" --> "0..*" Listing : publishes
Listing "0..1" --> "1" Sale : markets
Listing "0..1" --> "1" Lease : markets
Advertisement "1" --> "1" Listing : promotes
Property "1" --> "0..*" Listing : listed as

@enduml
